[gd_scene load_steps=3 format=3 uid="uid://jq01pd37c6hv"]

[ext_resource type="Script" uid="uid://pw2p3agis3lb" path="res://skill_tree.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cit6gwe5px1q8" path="res://fonts/Xolonium-Regular.ttf" id="2"]

[node name="SkillTree" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 40
text = "Skill Tree"
horizontal_alignment = 1

[node name="Points" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 24
text = "Skill Points: 0"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="SpeedUpgrade" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(190, 90)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "Movement Speed
Level: 0
Cost: 1"

[node name="BulletSpeedUpgrade" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(190, 90)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "Bullet Speed
Level: 0
Cost: 1"

[node name="FireRateUpgrade" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(190, 90)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "Fire Rate
Level: 0
Cost: 1"

[node name="BulletSizeUpgrade" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(190, 90)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 20
text = "Bullet Size
Level: 0
Cost: 1"

[node name="ContinueButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 32
text = "Continue"

[connection signal="pressed" from="Panel/GridContainer/SpeedUpgrade" to="." method="_on_SpeedUpgrade_pressed"]
[connection signal="pressed" from="Panel/GridContainer/BulletSpeedUpgrade" to="." method="_on_BulletSpeedUpgrade_pressed"]
[connection signal="pressed" from="Panel/GridContainer/FireRateUpgrade" to="." method="_on_FireRateUpgrade_pressed"]
[connection signal="pressed" from="Panel/GridContainer/BulletSizeUpgrade" to="." method="_on_BulletSizeUpgrade_pressed"]
[connection signal="pressed" from="Panel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
